# almanack

./: .buildinfo  .gitignore  .linkcheckerrc.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vale.ini  =4.2.0  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  coverage.xml  genindex.html  introduction.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  sbom.json  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/actions/install-python-env/: action.yml
.github/workflows/: dependabot-pre-commit.yaml  deploy-book.yml  draft-release.yml  entropy-check.yml  pre-commit-checks.yml  publish-pypi.yml  pytest-tests.yml  test-links.yml  test-pr-comment.yml
_modules/: index.html
_modules/almanack/: batch_processing.html  book.html  cli.html  git.html
_modules/almanack/metrics/: data.html  remote.html
_modules/almanack/metrics/entropy/: calculate_entropy.html  processing_repositories.html
_modules/almanack/metrics/garden_lattice/: connectedness.html  practicality.html  understanding.html
_modules/almanack/reporting/: report.html
_posters/2025/: readme.html
_sources/checks/: SGA-GL-0002.md  SGA-GL-0005.md  SGA-GL-0006.md  SGA-GL-0015.md  SGA-GL-0025.md  SGA-GL-0030.md  index.md
_sources/garden-circle/: package-api.md
checks/: SGA-GL-0001.html  SGA-GL-0002.html  SGA-GL-0003.html  SGA-GL-0004.html  SGA-GL-0005.html  SGA-GL-0006.html  SGA-GL-0007.html  SGA-GL-0015.html  SGA-GL-0017.html  SGA-GL-0025.html  SGA-GL-0026.html  SGA-GL-0030.html  index.html
garden-circle/: contributing.html  garden-circle.html  garden-map.html  package-api.html  pavilion.html
garden-lattice/: garden-lattice.html  understanding.html
scripts/: update_coverage_badge.py
seed-bank/: seed-bank.html
seed-bank/almanack-example/: almanack-example.html
seed-bank/pubmed-github-repositories/: gather-software-information-entropy.html  understanding-pubmed-github-repos.html  visualize-pubmed-repo-sofware-entropy.html
software-forest/: software-forest.html
src/almanac/: __init__.py  _config.yml  _toc.yml  book.py  introduction.md  references.bib
src/almanac/_static/: custom.css
src/almanac/garden-circle/: contributing.md  garden-map.md
src/almanac/garden-lattice/: garden-lattice.md
src/almanac/garden-time/: garden-time.md
src/almanac/software-forest/: software-forest.md
src/almanac/verdant-sundial/: verdant-sundial.md
src/almanack/: LoC_tracker.py  __init__.py  batch.py  book.py  cli.py  code_tracker.py  entropy.py  entropy_formula.py  git.py  git_extracting.py  git_parser.py  repo_helper.py
src/almanack/checks/: checks.yml  data.py  index.py
src/almanack/checks/entropy/: calculate_entropy.py  compute_data.py  processing_repositories.py
src/almanack/metrics/: blobs.py  checks.yml  data.py  metrics.yml  notebooks.py  programming_extensions.yml  remote.py
src/almanack/metrics/entropy/: calculate_entropy.py
src/almanack/metrics/garden_lattice/: connectedness.py  practicality.py  understanding.py
src/almanack/processing/: compute_data.py  generate_data.py  processing_repositories.py
src/almanack/reporting/: cli.py  report.py
src/book/: _config.yml  _toc.yml  conf.py  introduction.md  references.bib
src/book/_ext/: gen_check_pages.py
src/book/_posters/2025/: poster.qmd  readme.md
src/book/_static/: custom.css
src/book/_templates/: check_template.md.j2
src/book/garden-circle/: contributing.md  package-api.md  pavilion.md
src/book/garden-lattice/: connectedness.md  practicality.md  understanding.md
src/book/seed-bank/: seed-bank.md  visualize.ipynb
src/book/seed-bank/almanack-example/: almanack-example.ipynb
src/book/seed-bank/pubmed-github-repositories/: almanack_checks.ipynb  gather-software-information-entropy.ipynb  repository_almanack_results_batch_1.parquet  understanding-pubmed-github-repos.ipynb
src/book/seed-bank/pubmed-github-repositories/gather-pubmed-repos/: generate_data.py
src/book/seed-bank/pubmed-github-repositories/repository_analysis_results/: batch_1.parquet  batch_10.parquet  batch_11.parquet  batch_12.parquet  batch_13.parquet  batch_14.parquet  batch_15.parquet  batch_16.parquet  batch_17.parquet  batch_18.parquet  batch_19.parquet  batch_2.parquet  batch_20.parquet  batch_21.parquet  batch_22.parquet  batch_23.parquet  batch_24.parquet  batch_25.parquet  batch_26.parquet  batch_27.parquet  batch_28.parquet  batch_29.parquet  batch_3.parquet  batch_30.parquet  batch_31.parquet  batch_32.parquet  batch_33.parquet  batch_34.parquet  batch_35.parquet  batch_36.parquet  batch_37.parquet  (+18 more)
src/book/seed-library/: seed-library.md
src/book/verdant-sundial/: repository_analysis_results.parquet  software-information-entropy.ipynb  visualize.ipynb
styles/config/vocabularies/almanac/: accept.txt
styles/config/vocabularies/almanack/: accept.txt
tests/: conftest.py  test_Loc.py  test_almanac.py  test_batch.py  test_build.py  test_calculate_entropy.py  test_cli.py  test_code_tracker.py  test_compute_data.py  test_dataset.py  test_entropy.py  test_generate_data.py  test_git.py  test_git_extract.py  test_git_parser.py  test_notebooks.py  test_processing_repositories.py  test_repo_change_tracker.py  utils.py
tests/checks/: test_data.py
tests/checks/entropy/: test_calculate_entropy.py  test_compute_data.py
tests/data/almanack/entropy/: add_data.py  add_entropy.py
tests/data/almanack/repo_setup/: code_inserter.py  create_repo.py  insert_code.py
tests/data/examples/pubmed/: generate_data.py  generate_github_enriched_data.py  pubmed_github_links.parquet
tests/data/jupyter-book/: fail-imports-not-first.ipynb  fail-imports-scattered.ipynb  ordered-nb.ipynb  pass-imports-calls.ipynb  pass-imports-first-cell.ipynb  pass-imports-with-docstrings-comments.ipynb  pass-imports-with-magic.ipynb  pass-no-imports.ipynb  pass-only-markdown.ipynb  unordered-nb.ipynb
tests/metrics/: test_blobs.py  test_calculate_entropy.py  test_data.py  test_garden_lattice.py  test_remote.py
verdant-sundial/: verdant-sundial.html
(+2 files in other folders)
